CrashOnOutOfMemoryError analysis.